--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   sensors_plus: ^3.0.3
   path_provider: ^2.0.14
   http: ^1.1.0
+  fluttertoast: ^8.2.4
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
