--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   path_provider: ^2.0.14
   http: ^1.1.0
   fluttertoast: ^8.2.4
+  flutter_launcher_icons: ^0.13.1
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -42,6 +44,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_native_splash: ^2.4.6
+
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -49,6 +53,27 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
+
+# flutter splash / launch screen
+flutter_native_splash:
+  color: "#ffffff" # background color
+  image: assets/splash.png
+  android: true
+  ios: true
+  android_gravity: center
+
+  android12:
+    image: assets/splash.png
+    icon_background_color: "#ffffff"
+    image_dark: assets/splash.png
+    icon_background_color_dark: "#000000"
+    # branding: assets/splash.png
+    # branding_mode: center
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/favicon.png" 
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
