--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   http: ^1.1.0
   fluttertoast: ^8.2.4
   flutter_launcher_icons: ^0.13.1
+  geolocator: ^10.0.1
 
 
   # The following adds the Cupertino Icons font to your application.
