--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,8 @@ dependencies:
   fluttertoast: ^8.2.4
   sensors_plus: ^6.1.1
   geolocator: ^10.0.1
+  permission_handler: ^11.3.1
+  noise_meter: ^5.0.2
 
 dev_dependencies:
   flutter_test:
